--- a/static/style.css
+++ b/static/style.css
@@ -1,1 +1,8 @@
 
+.rounded {
+    border: 2px solid #a1a1a1;
+    padding: 10px 40px; 
+    background: #dddddd;
+    width: 300px;
+    border-radius: 25px;
+}
