weird friday at work

--- a/static/style.css
+++ b/static/style.css
@@ -11,3 +11,9 @@
   background: #ffffff;
   border-radius:25px;
 }
+.texttable {
+  border: 2px solid #a1a1a1;
+  padding 70px 70px;
+  background: #ffffff;
+  border-radius:25px;
+}
